--- a/bower/1/bower.json
+++ b/bower/1/bower.json
@@ -1,10 +1,8 @@
 {
-  "name": "RequireJS Starter",
+  "name": "AngularJS + RequireJS Boilerplate",
   "version": "1.0.0",
   "dependencies": {
-    "requirejs": "latest",
-    "jquery": "latest",
-    "backbone-amd": "latest",
-    "underscore-amd": "latest"
+    "angular": "latest",
+    "requirejs": "latest"
   }
 }
